Alignment of the sent & rcved text fixed

--- a/front-end/src/components/MessageBody.css
+++ b/front-end/src/components/MessageBody.css
@@ -1,6 +1,3 @@
-.msgBody {
-
-}
 
 .msgs{
 list-style: none;
@@ -14,4 +11,12 @@ align-items: end;
   display: inline-block;
   border-radius: 4px;
   
+}
+
+.msgSent{
+  align-self: end;
+}
+
+.msgRcvd{
+  align-self: start;
 }
